// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-label Should render label with required false and colon false 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required false and colon true 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    :
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required true and colon false 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    <span class="is-asterisk">
      *
    </span>
  </label>
</mg-label>
`;

exports[`mg-label Should render label with required true and colon true 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    <span class="is-asterisk">
      *
    </span>
    :
  </label>
</mg-label>
`;
